--- a/WpfApplication1/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1/WpfApplication1/WpfApplication1.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -56,8 +57,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="INSERTLABORATRY.xaml.cs">
+      <DependentUpon>INSERTLABORATRY.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InsertTechnicalSupport.xaml.cs">
       <DependentUpon>InsertTechnicalSupport.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ShowLaboratory.xaml.cs">
+      <DependentUpon>ShowLaboratory.xaml</DependentUpon>
     </Compile>
     <Compile Include="ShowNotes.xaml.cs">
       <DependentUpon>ShowNotes.xaml</DependentUpon>
@@ -65,6 +72,10 @@
     <Compile Include="ShowTechnicalSupport.xaml.cs">
       <DependentUpon>ShowTechnicalSupport.xaml</DependentUpon>
     </Compile>
+    <Page Include="INSERTLABORATRY.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="InsertNote.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -88,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ShowLaboratory.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ShowNotes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
